changed file format, removed ga

--- a/index.fbo.cube.html
+++ b/index.fbo.cube.html
@@ -16,7 +16,7 @@
 		<script type='text/javascript' src='/js/mouse3d.js'></script>
 		<script type='text/javascript' src='main.fbo.cube.js'></script>
 		
-<script type='text/javascript'>
+<!-- script type='text/javascript'>
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-17312646-1']);
 _gaq.push(['_trackPageview']);
@@ -25,7 +25,7 @@ _gaq.push(['_trackPageview']);
 	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
-</script>
+</script -->
 		<script id='shader-common' type='x-shader/x-fragment'>
 float tanh(float x) {
 	float exp2x = exp(2. * x);
