--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@ _gaq.push(['_trackPageview']);
 			for M the mass of the object.<br>
 			<a href='http://spiro.fisica.unipd.it/~antonell/schwarzschild/'>This guy</a> was kind enough to reference this page and publicise the previous math error I had here (I had forgot the cross terms).
 			If only he was kind enough to attempt to contact me in private first, I could have reminded him that the renderer implementation's geodesic calculations were based on the correct pseudo-Cartesian metric all along.
-			Here's my <a href='/symbolic-lua/test-output/Schwarzschild%20-%20Cartesian.html'>geodesic calculations</a>.<br>
+			Here's where I got the metric from: <a href='https://arxiv.org/abs/0904.4184'>Catalogue of Spacetimes</a> by Mueller &amp; Grave.
+			Here's my <a href='/symbolic-lua/test-output/Schwarzschild%20-%20Cartesian.html'>geodesic calculations</a> based on my <a href='/symbolic-lua'>Computer Algebra System</a> in Lua.<br>
 			<h3>Kerr Geodesic</h3>
 			The Kerr metric describes the curvature of spacetime around a spherical rotating object.
 			The metric is given as \( {ds}^2 = -{dt}^2 + {dx}^2 + {dy}^2 + {dz}^2 + {2mr^3 \over {r^4 + a^2 z^2}} (dt + {{rx+ay}\over{a^2+r^2}} dx + {{ry-ax}\over{a^2+r^2}} dy + {z \over r} dz)^2 \)
