--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ _gaq.push(['_trackPageview']);
 				Warp Bubble Velocity (c): <input id='warpBubbleVelocity'/><br>
 				Warp Bubble Radius: <input id='warpBubbleRadius'/><br>
 			</div>
-			<input type='radio' name='1' id='GeodesicTestCubeRenderer'>Original Background</input><br>
-			<input type='radio' name='1' id='GeodesicSWRenderer'>Software update</input><br>
-			<input type='radio' name='1' id='GeodesicFBORenderer'>FBO update</input><br>
+			<!-- input type='radio' name='1' id='GeodesicTestCubeRenderer'>Original Background</input><br -->
+			<!-- input type='radio' name='1' id='GeodesicSWRenderer'>Software update</input><br -->
+			<!-- input type='radio' name='1' id='GeodesicFBORenderer'>FBO update</input><br -->
 			<button id='reset'>Reset</button><br>
 			<!-- button id='pause'>Pause</button><br -->
 			<!-- Update: <progress id='update-progress' max='100' value='0'></progress><br> -->
