working on this

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ _gaq.push(['_trackPageview']);
 			Black Hole Mass (kg): <input id='blackHoleMass'/><br>
 			<div id="Schwarzschild_Black_Hole_params">
 			</div>
-			<div id="Schwarzschild_Black_Hole_params">
+			<div id="Kerr_Black_Hole_params">
 				Black Hole Charge (kg): <input id='blackHoleCharge'/><br>
 				Black Hole Angular Velocity (kg): <input id='blackHoleAngularVelocity'/><br>
 			</div>
