added a checkbox for simulation

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ _gaq.push(['_trackPageview']);
 	
 			<input type='radio' name='mouseMethod' id='mouseMethod_rotateCamera' value='rotateCamera' checked=1/> rotate background<br>
 			<input type='radio' name='mouseMethod' id='mouseMethod_rotateObject' value='rotateObject'/> rotate view<br>
+			
+			<input type='checkbox' id='runSimulation' name='runSimulation' checked=1/> simulate<br>
+			
 			<button id='reset'>reset field</button><br>
 		</div>
 			
