switching to modules

--- a/index.html
+++ b/index.html
@@ -7,42 +7,28 @@
 		<meta name='apple-mobile-web-app-capable' content='yes'/>
 		<meta name='apple-mobile-web-app-status-bar-style' content='black-translucent'/>
 
-		<script type='text/javascript' src='/js/jquery-1.11.1.min.js'></script>
-		<script type='text/javascript' src='/js/purl.js'></script>
-		<script type='text/javascript' src='/js/util.js'></script>
-		<script type='text/javascript' src='/js/gl-matrix.2.2.0.min.js'></script>
-		<script type='text/javascript' src='/js/gl-util.js'></script>
-		<script type='text/javascript' src='../js/gl-util-gradient.js'></script>
-		<script type='text/javascript' src='/js/gl-util-unitquad.js'></script>
-		<script type='text/javascript' src='/js/gl-util-kernel.js'></script>
-		<script type='text/javascript' src='/js/mouse3d.js'></script>
-		<script type='text/javascript' src='/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
-		<script type='text/javascript' src='renderer.testcube.js'></script>
-		<script type='text/javascript' src='renderer.sw.js'></script>
-		<script type='text/javascript' src='renderer.fbo.js'></script>
-		<script type='text/javascript' src='main.js'></script>
-
-<script>
-MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
-<!-- script type='text/javascript'>
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-17312646-1']);
-_gaq.push(['_trackPageview']);
-(function() {
-	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-</script -->
-
+		<script type="text/javascript">
+// mathjax config
+// https://docs.mathjax.org/en/latest/web/configuration.html
+MathJax = {
+	tex: {
+		inlineMath: [['$', '$'], ['\\(', '\\)']]
+	},
+	svg: {
+		fontCache: 'global'
+	}
+};
+		</script>	
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+		
+		<script type='module' src='main.js' defer></script>
 	</head>
 	<body style='margin:0px; overflow:hidden; background-color:black; color:white'>
 		<div id='menu' style='position:absolute'>
 			<img id='panelButton' src='menu.png' style='padding:5px'/>
 			<button id='infoButton' style='background-color:black; color:white; width:24px; height:24px; border:1px solid white; cursor:pointer; display:table-cell; align:center; vertical-align:top; margin:5px'>?</button><br>
 		</div>
-		<div id='panel' style='overflow:scroll; z-index:1; position:absolute; top:32px; display:none'>
+		<div id='panel' style='overflow:hidden; z-index:1; position:absolute; top:32px; display:none'>
 			Iteration d/dLambda: <input id='deltaLambda'/><br>
 			<select id='objectTypes'></select><br>
 			Object Distance (m): <input id='objectDist'/><br>
@@ -191,17 +177,6 @@ $.
 		
 		<div id='webglfail' style='display:none'>
 			Sorry, your browser does not support WebGL<br>
-			Try one of these other, better browsers:<br>
-			<a href='http://www.google.com/chrome'>Chrome</a><br>
-			<a href='http://www.mozilla.org/firefox'>Firefox</a><br>
-			<a href='http://www.apple.com/safari'>Safari</a><br>
-			<b>Opera Users:</b><br>
-			Enter "opera:config" in the address bar.<br>
-			In the "User Prefs" section set both "Enable Hardware Acceleration" and "Enable WebGL" to "1" and then click "Save".<br>
-			It is still buggy.<br>
-			<b>IE Users:</b><br>
-			Sorry guys, IE doesn't plan to support WebGL.<br>
-			Consider using a more <a href='http://www.w3schools.com/browsers/browsers_stats.asp'>standard compliant</a> browser.<br>
 		</div>
 	</body>
 </html>
