--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ MathJax = {
 		fontCache: 'global'
 	}
 };
-		</script>	
+		</script>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
-		
+
 		<script type='module' src='main.js' defer></script>
 	</head>
 	<body style='margin:0px; overflow:hidden; background-color:black; color:white'>
@@ -32,23 +32,25 @@ MathJax = {
 			Iteration d/dLambda: <input id='deltaLambda'/><br>
 			<select id='objectTypes'></select><br>
 			Object Distance (m): <input id='objectDist'/><br>
-			
+
 			<!-- TODO only show this for Schwarzschild/Kerr black holes -->
 			Black Hole Mass (kg): <input id='blackHoleMass'/><br>
 			<!-- TODO only the two Kerr black hole options -->
 			Black Hole Charge (kg): <input id='blackHoleCharge'/><br>
 			Black Hole Angular Velocity (kg): <input id='blackHoleAngularVelocity'/><br>
-			<div id="Schwarzschild_Black_Hole_params">
+			<div id="Schwarzschild Black Hole params">
 			</div>
-			<div id="Kerr_Black_Hole_params">
+			<div id="Schwarzschild Black Hole - Spherical params">
 			</div>
-			<div id="Alcubierre_Warp_Drive_Bubble_params">
+			<div id="Kerr Black Hole params">
+			</div>
+			<div id="Alcubierre Warp Drive Bubble params">
 				Warp Bubble Thickness: <input id='warpBubbleThickness'/><br>
 				Warp Bubble Velocity (c): <input id='warpBubbleVelocity'/><br>
 				Warp Bubble Radius: <input id='warpBubbleRadius'/><br>
 			</div>
 			<hr>
-			
+
 			<input type='radio' name='mouseMethod' value='rotateCamera' checked=1/> rotate background<br>
 			<input type='radio' name='mouseMethod' value='rotateObject'/> rotate view<br>
 			<hr>
@@ -65,7 +67,7 @@ MathJax = {
 			<button id='reset'>reset field</button><br>
 			<button id='reset_view'>reset view</button><br>
 		</div>
-			
+
 		<div id='info' style='display:none; overflow:scroll; top:32px; z-index:1; position:absolute; background-color:rgba(255,255,255,.85); color:black; padding:10px'>
 			<h3>Photons</h3>
 			Light travels in a straight line.  Let's represent the position of a particle of light as $x^\mu$, for $\mu$ running over indexes 0, 1, 2, 3.
@@ -74,7 +76,7 @@ MathJax = {
 			<br>
 			Let $\tau$ represent the particle's local time.
 			The change in the light particle's position (in space and time) relative to the observer with respect to the change in the particle's local time can be represented as ${d \over {d\tau}} x^\mu$, or ${\dot x}^\mu$ for short.
-			This is the velocity in the observer's rest frame. 
+			This is the velocity in the observer's rest frame.
 			This appearance of velocity is only present to the observer, of course.
 			To the particle of light in its own rest frame, it is existing in all locations from its origin to its destination simultaneously.
 			For more on that check out the page on <a href='/time-dilation'>time dilation</a>.<br>
@@ -114,16 +116,16 @@ MathJax = {
 			The Christoffel Symbol of the Second Kind can be defined as $ {\Gamma^\alpha}_{\beta\gamma} = g^{\alpha\mu} \Gamma_{\mu\beta\gamma} $,
 			for $g^{\alpha\mu}$ the inverse of the metric tensor and for $ {\Gamma_{\mu\beta\gamma}} $ the Christoffel Symbol of the First Kind.
 			The Christoffel Symbol of the First Kind is then defined as $ \Gamma_{\alpha\beta\gamma} = {1 \over 2} (g_{\alpha\beta,\gamma} + g_{\alpha\gamma,\beta} - g_{\beta\gamma,\alpha})$
-			for comma derivative shorthand $g_{\alpha\beta,\gamma} = {{d g_{\alpha\beta}} \over {d {x^\gamma}}}$.<br>		
+			for comma derivative shorthand $g_{\alpha\beta,\gamma} = {{d g_{\alpha\beta}} \over {d {x^\gamma}}}$.<br>
 			<br>
 			One of a few ways to derive the geodesic equation is to extremalize the action of the arclength (squared):
 			Let $ I = \int g_{\mu \nu} {\dot x}^\mu {\dot x}^\nu d\tau $ and then solve for $ {{\delta I} \over {\delta x^\alpha}} = 0$.<br>
-			<div class='showWork'>	
+			<div class='showWork'>
 			$ I = \int g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu d\tau $<br>
 			$ \delta I = \delta \int g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu d\tau $ <br>
 			$ \delta I = \int ( \delta g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu + g_{\mu\nu} (\delta {\dot x}^\mu {\dot x}^\nu + {\dot x}^\mu \delta {\dot x}^\nu) ) d\tau $ <br>		<!-- delta int == int delta, the distribute -->
 			Next we use integration by parts and disregard the newly created total integrals: $ \int u dv = uv - \int v du $ for $ uv = 0 $ <br>
-			$ \delta I = \int ( \delta g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu - \delta x^\mu ({\dot g}_{\mu\nu} {\dot x}^\nu + g_{\mu\nu} {\ddot x}^\nu) - \delta x^\nu ({\dot g}_{\mu\nu} {\dot x}^\mu g_{\mu\nu} {\ddot x}^\mu) ) d\tau $<br> 
+			$ \delta I = \int ( \delta g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu - \delta x^\mu ({\dot g}_{\mu\nu} {\dot x}^\nu + g_{\mu\nu} {\ddot x}^\nu) - \delta x^\nu ({\dot g}_{\mu\nu} {\dot x}^\mu g_{\mu\nu} {\ddot x}^\mu) ) d\tau $<br>
 			$ \delta I = \int ( \delta g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu - \delta x^\nu ({\dot g}_{\nu\mu} {\dot x}^\mu + g_{\nu\mu} {\ddot x}^\mu) - \delta x^\nu ({\dot g}_{\mu\nu} {\dot x}^\mu + g_{\mu\nu} {\ddot x}^\mu) ) d\tau $<br>	<!-- second term swap u's and v's (they're both summed indexes so you can do this) -->
 			$ \delta I = \int ( \delta g_{\mu\nu} {\dot x}^\mu {\dot x}^\nu - 2 \delta x^\nu ({\dot g}_{\mu\nu} {\dot x}^\mu + g_{\mu\nu} {\ddot x}^\mu) ) d\tau $ <br>
 			$ {{\delta I} \over {\delta x^\sigma}} = \int ( {{\delta g_{\mu\nu}} \over {{\delta x}^\sigma}} {\dot x}^\mu {\dot x}^\nu - 2 \delta^\mu_\sigma ({\dot g}_{\mu\nu} {\dot x}^\nu + g_{\mu\nu} {\ddot x}^\nu ) ) d\tau $<br>
@@ -145,7 +147,7 @@ MathJax = {
 			In the end we get a formula for computing ${\ddot x}^\mu$ based on the $x^\mu$ and ${\dot x}^\mu$.<br>
 			<br>
 			<h3>Tracing Rays</h3>
-			Once we have these relations we can approximate them by simulating the position and velocity of light particles at arbitrary samples on the screen. 
+			Once we have these relations we can approximate them by simulating the position and velocity of light particles at arbitrary samples on the screen.
 			The positions and velocities are updated using your favorite numeric integration method with the following equations:
 $ {d \over {d\tau}} \left[ \matrix { x^\mu \\ {\dot x}^\mu } \right]
 = \left[ \matrix{ {\dot x}^\mu \\ {\ddot x}^\mu } \right]
@@ -154,9 +156,9 @@ $.
 			<h3>Schwarzschild Geodesic</h3>
 			The Schwarzschild metric describes the curvature of spacetime around a spherical object.
 			The Schwarzschild metric in spherical coordinates is $ ds^2 = -(1 - {2 M \over r}) {dt}^2 + (1 - \frac{2 M}{r} )^{-1} dr^2 + r^2 (d\theta^2 + sin(\theta)^2 d\phi^2) $ for M the mass of the object.<br>
-			In isotropic Cartesian coordinates it is given as $ ds^2 = -\left( \frac{1-\frac{M}{2\rho}}{1+\frac{M}{2\rho}} \right)^2 dt^2 + \left( 1 + \frac{M}{2\rho} \right)^4 (dx^2 + dy^2 + dz^2)$, 
+			In isotropic Cartesian coordinates it is given as $ ds^2 = -\left( \frac{1-\frac{M}{2\rho}}{1+\frac{M}{2\rho}} \right)^2 dt^2 + \left( 1 + \frac{M}{2\rho} \right)^4 (dx^2 + dy^2 + dz^2)$,
 			where $r = \rho (1 + \frac{M}{2\rho})^2$.<br>
-	
+
 <img src="r_for_rho.svg"/><br>
 <br>
 
@@ -174,7 +176,7 @@ $.
 			R the warp bubble radius,
 			and $ \sigma $ the warp bubble thickness.<br>
 		</div>
-		
+
 		<div id='webglfail' style='display:none'>
 			Sorry, your browser does not support WebGL<br>
 		</div>
